Улучшения в контейнере "Услуги и Фото"

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
         <nav>
           <ul class="menu">
-            <li><a class="scroll" href="#service">	Услуги</a></li>
-            <li><a class="scroll" href="#betters">	Наши преимущества</a></li>
-            <li><a class="scroll" href="#">			    Вакансии</a></li>
+            <li><a class="scroll" href="#service">Услуги</a></li>
+            <li><a class="scroll" href="#betters">Наши преимущества</a></li>
+            <li><a class="scroll" href="#">Вакансии</a></li>
           </ul>
         </nav>
 
@@ -78,42 +78,48 @@
   <section>
     <div style=" margin: 0 auto; max-width: 1440px;">
       <div class="container-service" id="service">
-        <div></div>
 
         <div class="moika">
-          <h2 class="bounceInLeft wow">Мойка</h2>
-          <p class="line"><img src="images/line.svg" class="bounceInLeft wow"></p>
-          <div class="bounceInLeft wow">
-            <p class="textblock1">Бесконтактная мойка с помощью аппарата высокого давления с применением профессиональной автохимии Koch Chemie®</p>
+          <div class="service-centered">
+            <h2 class="bounceInLeft wow" style="width: 268px;">Мойка</h2>
+            <p class="line" style="width: 268px;"><img src="images/line.svg" class="bounceInLeft wow"></p>
+            <div class="bounceInLeft wow" style="width: 268px;">
+              <p class="textblock1">Бесконтактная мойка с помощью аппарата высокого давления с применением профессиональной автохимии Koch Chemie®</p>
+            </div>
           </div>
         </div>
 
         <div class="himchistka">
-          <h2 class="bounceInLeft wow">Химчистка</h2>
-          <p class="line"><img src="images/line.svg" class="bounceInLeft wow"></p>
-          <div class="bounceInLeft wow">
-            <p class="textblock1">Комплексная и детальная с использованием самого современного оборудования. Бережный и тщательный уход за интерьером авто</p>
+          <div class="service-centered">
+            <h2 class="bounceInLeft wow" style="width: 268px;">Химчистка</h2>
+            <p class="line" style="width: 268px;"><img src="images/line.svg" class="bounceInLeft wow"></p>
+            <div class="bounceInLeft wow" style="width: 268px;">
+              <p class="textblock1">Комплексная и детальная с использованием самого современного оборудования. Бережный и тщательный уход за интерьером авто</p>
+            </div>
           </div>
         </div>
 
         <div class="polirovka">
-          <h2 class="bounceInRight wow">Полировка</h2>
-          <p class="line"><img src="images/line.svg" class="bounceInRight wow"></p>
-          <div class="bounceInRight wow">
-            <p class="textblock1">Koch24 Север предлагает Вам профессиональные услуги по восстановлению ЛКП автомобиля, мотоцикла, путем очистки и полировки</p>
+          <div class="service-centered">
+            <h2 class="bounceInRight wow" style="width: 268px;">Полировка</h2>
+            <p class="line" style="width: 268px;"><img src="images/line.svg" class="bounceInRight wow"></p>
+            <div class="bounceInRight wow" style="width: 268px;">
+              <p class="textblock1">Koch24 Север предлагает Вам профессиональные услуги по восстановлению ЛКП автомобиля, мотоцикла, путем очистки и полировки</p>
+            </div>
           </div>
         </div>
 
 
         <div class="shini">
-          <h2 class="bounceInRight wow">Шиномонтаж</h2>
-          <p class="line"><img src="images/line.svg" class="bounceInRight wow"></p>
-          <div class="bounceInRight wow">
-            <p class="textblock1">Шиномонтаж в компании Koch24 Север — это не только высококачественное оборудование, но и профессиональные мастера</p>
+          <div class="service-centered">
+            <h2 class="bounceInRight wow" style="width: 268px;">Шиномонтаж</h2>
+            <p class="line" style="width: 268px;"><img src="images/line.svg" class="bounceInRight wow"></p>
+            <div class="bounceInRight wow" style="width: 268px;">
+              <p class="textblock1">Шиномонтаж в компании Koch24 Север — это не только высококачественное оборудование, но и профессиональные мастера</p>
+            </div>
           </div>
         </div>
 
-        <div></div>
       </div>
     </div>
     <img src="images/photo2.svg" class="zoomIn wow" style="width: 100vw">
